AMICoreJava/gen/MQLParser.java
// Generated from /Users/jodier/IdeaProjects/AMICore/AMICoreJava/src/main/antlr4/net/hep/ami/jdbc/query/mql/MQL.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, SELECT=13, DISTINCT=14, AS=15, WHERE=16, 
		GROUP=17, ORDER=18, BY=19, ASC=20, DESC=21, LIMIT=22, OFFSET=23, INSERT=24, 
		UPDATE=25, VALUES=26, DELETE=27, OR=28, XOR=29, AND=30, COMP=31, NOT=32, 
		LIKE=33, REGEXP=34, BETWEEN=35, IN=36, IS=37, PLUS=38, MINUS=39, MUL=40, 
		DIV=41, MOD=42, FUNCTION=43, NULL=44, CURRENT_TIMESTAMP=45, STRING=46, 
		PARAMETER=47, NUMBER=48, ID=49, COMMENT=50, WS=51;
	public static final int
		RULE_mqlQuery = 0, RULE_selectStatement = 1, RULE_insertStatement = 2, 
		RULE_updateStatement = 3, RULE_deleteStatement = 4, RULE_columnList = 5, 
		RULE_aColumn = 6, RULE_qIdList = 7, RULE_aQId = 8, RULE_expressionTuple = 9, 
		RULE_qIdTuple = 10, RULE_literalTuple = 11, RULE_expressionOr = 12, RULE_expressionXor = 13, 
		RULE_expressionAnd = 14, RULE_expressionNot = 15, RULE_expressionComp = 16, 
		RULE_expressionAddSub = 17, RULE_expressionMulDiv = 18, RULE_expressionPlusMinus = 19, 
		RULE_expressionX = 20, RULE_function = 21, RULE_qId = 22, RULE_constraintQId = 23, 
		RULE_basicQId = 24, RULE_literal = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"mqlQuery", "selectStatement", "insertStatement", "updateStatement", 
			"deleteStatement", "columnList", "aColumn", "qIdList", "aQId", "expressionTuple", 
			"qIdTuple", "literalTuple", "expressionOr", "expressionXor", "expressionAnd", 
			"expressionNot", "expressionComp", "expressionAddSub", "expressionMulDiv", 
			"expressionPlusMinus", "expressionX", "function", "qId", "constraintQId", 
			"basicQId", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'('", "')'", "'['", "']'", "'{'", "'|'", "'}'", 
			"'!'", "'#'", "'.'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "SELECT", "DISTINCT", "AS", "WHERE", "GROUP", "ORDER", "BY", "ASC", 
			"DESC", "LIMIT", "OFFSET", "INSERT", "UPDATE", "VALUES", "DELETE", "OR", 
			"XOR", "AND", "COMP", "NOT", "LIKE", "REGEXP", "BETWEEN", "IN", "IS", 
			"PLUS", "MINUS", "MUL", "DIV", "MOD", "FUNCTION", "NULL", "CURRENT_TIMESTAMP", 
			"STRING", "PARAMETER", "NUMBER", "ID", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MqlQueryContext extends ParserRuleContext {
		public SelectStatementContext m_select;
		public InsertStatementContext m_insert;
		public UpdateStatementContext m_update;
		public DeleteStatementContext m_delete;
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public MqlQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mqlQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterMqlQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitMqlQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitMqlQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MqlQueryContext mqlQuery() throws RecognitionException {
		MqlQueryContext _localctx = new MqlQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mqlQuery);
		int _la;
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(T__0);
				}
				break;
			case SELECT:
			case INSERT:
			case UPDATE:
			case DELETE:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SELECT:
					{
					setState(53);
					((MqlQueryContext)_localctx).m_select = selectStatement();
					}
					break;
				case INSERT:
					{
					setState(54);
					((MqlQueryContext)_localctx).m_insert = insertStatement();
					}
					break;
				case UPDATE:
					{
					setState(55);
					((MqlQueryContext)_localctx).m_update = updateStatement();
					}
					break;
				case DELETE:
					{
					setState(56);
					((MqlQueryContext)_localctx).m_delete = deleteStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(59);
					match(T__0);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectStatementContext extends ParserRuleContext {
		public Token m_distinct;
		public ColumnListContext m_columns;
		public ExpressionOrContext m_expression;
		public QIdListContext m_groupBy;
		public QIdListContext m_orderBy;
		public Token m_orderWay;
		public Token m_limit;
		public Token m_offset;
		public TerminalNode SELECT() { return getToken(MQLParser.SELECT, 0); }
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(MQLParser.WHERE, 0); }
		public TerminalNode GROUP() { return getToken(MQLParser.GROUP, 0); }
		public List<TerminalNode> BY() { return getTokens(MQLParser.BY); }
		public TerminalNode BY(int i) {
			return getToken(MQLParser.BY, i);
		}
		public TerminalNode ORDER() { return getToken(MQLParser.ORDER, 0); }
		public TerminalNode LIMIT() { return getToken(MQLParser.LIMIT, 0); }
		public TerminalNode DISTINCT() { return getToken(MQLParser.DISTINCT, 0); }
		public ExpressionOrContext expressionOr() {
			return getRuleContext(ExpressionOrContext.class,0);
		}
		public List<QIdListContext> qIdList() {
			return getRuleContexts(QIdListContext.class);
		}
		public QIdListContext qIdList(int i) {
			return getRuleContext(QIdListContext.class,i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(MQLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(MQLParser.NUMBER, i);
		}
		public TerminalNode OFFSET() { return getToken(MQLParser.OFFSET, 0); }
		public TerminalNode ASC() { return getToken(MQLParser.ASC, 0); }
		public TerminalNode DESC() { return getToken(MQLParser.DESC, 0); }
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitSelectStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitSelectStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(SELECT);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(65);
				((SelectStatementContext)_localctx).m_distinct = match(DISTINCT);
				}
			}

			setState(68);
			((SelectStatementContext)_localctx).m_columns = columnList();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(69);
				match(WHERE);
				setState(70);
				((SelectStatementContext)_localctx).m_expression = expressionOr();
				}
			}

			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(73);
				match(GROUP);
				setState(74);
				match(BY);
				setState(75);
				((SelectStatementContext)_localctx).m_groupBy = qIdList();
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(78);
				match(ORDER);
				setState(79);
				match(BY);
				setState(80);
				((SelectStatementContext)_localctx).m_orderBy = qIdList();
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASC || _la==DESC) {
					{
					setState(81);
					((SelectStatementContext)_localctx).m_orderWay = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==ASC || _la==DESC) ) {
						((SelectStatementContext)_localctx).m_orderWay = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
			}

			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(86);
				match(LIMIT);
				setState(87);
				((SelectStatementContext)_localctx).m_limit = match(NUMBER);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OFFSET) {
					{
					setState(88);
					match(OFFSET);
					setState(89);
					((SelectStatementContext)_localctx).m_offset = match(NUMBER);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertStatementContext extends ParserRuleContext {
		public QIdTupleContext m_qIds;
		public ExpressionTupleContext m_expressions;
		public TerminalNode INSERT() { return getToken(MQLParser.INSERT, 0); }
		public TerminalNode VALUES() { return getToken(MQLParser.VALUES, 0); }
		public QIdTupleContext qIdTuple() {
			return getRuleContext(QIdTupleContext.class,0);
		}
		public ExpressionTupleContext expressionTuple() {
			return getRuleContext(ExpressionTupleContext.class,0);
		}
		public InsertStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterInsertStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitInsertStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitInsertStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertStatementContext insertStatement() throws RecognitionException {
		InsertStatementContext _localctx = new InsertStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_insertStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(INSERT);
			setState(95);
			((InsertStatementContext)_localctx).m_qIds = qIdTuple();
			setState(96);
			match(VALUES);
			setState(97);
			((InsertStatementContext)_localctx).m_expressions = expressionTuple();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateStatementContext extends ParserRuleContext {
		public QIdTupleContext m_qIds;
		public ExpressionTupleContext m_expressions;
		public ExpressionOrContext m_expression;
		public TerminalNode UPDATE() { return getToken(MQLParser.UPDATE, 0); }
		public TerminalNode VALUES() { return getToken(MQLParser.VALUES, 0); }
		public QIdTupleContext qIdTuple() {
			return getRuleContext(QIdTupleContext.class,0);
		}
		public ExpressionTupleContext expressionTuple() {
			return getRuleContext(ExpressionTupleContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(MQLParser.WHERE, 0); }
		public ExpressionOrContext expressionOr() {
			return getRuleContext(ExpressionOrContext.class,0);
		}
		public UpdateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterUpdateStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitUpdateStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitUpdateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UpdateStatementContext updateStatement() throws RecognitionException {
		UpdateStatementContext _localctx = new UpdateStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_updateStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(UPDATE);
			setState(100);
			((UpdateStatementContext)_localctx).m_qIds = qIdTuple();
			setState(101);
			match(VALUES);
			setState(102);
			((UpdateStatementContext)_localctx).m_expressions = expressionTuple();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(103);
				match(WHERE);
				setState(104);
				((UpdateStatementContext)_localctx).m_expression = expressionOr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeleteStatementContext extends ParserRuleContext {
		public ExpressionOrContext m_expression;
		public TerminalNode DELETE() { return getToken(MQLParser.DELETE, 0); }
		public TerminalNode WHERE() { return getToken(MQLParser.WHERE, 0); }
		public ExpressionOrContext expressionOr() {
			return getRuleContext(ExpressionOrContext.class,0);
		}
		public DeleteStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deleteStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterDeleteStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitDeleteStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitDeleteStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeleteStatementContext deleteStatement() throws RecognitionException {
		DeleteStatementContext _localctx = new DeleteStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_deleteStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(DELETE);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(108);
				match(WHERE);
				setState(109);
				((DeleteStatementContext)_localctx).m_expression = expressionOr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnListContext extends ParserRuleContext {
		public AColumnContext aColumn;
		public List<AColumnContext> m_columns = new ArrayList<AColumnContext>();
		public List<AColumnContext> aColumn() {
			return getRuleContexts(AColumnContext.class);
		}
		public AColumnContext aColumn(int i) {
			return getRuleContext(AColumnContext.class,i);
		}
		public ColumnListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterColumnList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitColumnList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitColumnList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnListContext columnList() throws RecognitionException {
		ColumnListContext _localctx = new ColumnListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_columnList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			((ColumnListContext)_localctx).aColumn = aColumn();
			((ColumnListContext)_localctx).m_columns.add(((ColumnListContext)_localctx).aColumn);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(113);
				match(T__1);
				setState(114);
				((ColumnListContext)_localctx).aColumn = aColumn();
				((ColumnListContext)_localctx).m_columns.add(((ColumnListContext)_localctx).aColumn);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AColumnContext extends ParserRuleContext {
		public ExpressionOrContext m_expression;
		public Token m_alias;
		public ExpressionOrContext expressionOr() {
			return getRuleContext(ExpressionOrContext.class,0);
		}
		public TerminalNode AS() { return getToken(MQLParser.AS, 0); }
		public TerminalNode ID() { return getToken(MQLParser.ID, 0); }
		public AColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aColumn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterAColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitAColumn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitAColumn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AColumnContext aColumn() throws RecognitionException {
		AColumnContext _localctx = new AColumnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_aColumn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			((AColumnContext)_localctx).m_expression = expressionOr();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(121);
				match(AS);
				setState(122);
				((AColumnContext)_localctx).m_alias = match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QIdListContext extends ParserRuleContext {
		public AQIdContext aQId;
		public List<AQIdContext> m_aQIds = new ArrayList<AQIdContext>();
		public List<AQIdContext> aQId() {
			return getRuleContexts(AQIdContext.class);
		}
		public AQIdContext aQId(int i) {
			return getRuleContext(AQIdContext.class,i);
		}
		public QIdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qIdList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).enterQIdList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MQLListener ) ((MQLListener)listener).exitQIdList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MQLVisitor ) return ((MQLVisitor<? extends T>)visitor).visitQIdList(this);
			else return visitor.visitChildren(this);
		}
	}
